# VLA-humanoid

./: README.md  action_quality_validator.py  record_default_position.py  simple_act_train.py  smooth_act_inference_node.py
ros_vla_language/: package.xml
ros_vla_language/config/: audio_config.yaml  llm_params.yaml
ros_vla_language/msg/: VLACommand.msg  VLAIntent.msg
ros_vla_language/scripts/: detect_audio_devices.py  latest_response.json  production_system.py  start_production_system.sh
ros_vla_language/scripts/tests/: test_asound_cards.py  test_microphone.py  test_tts.py
ros_vla_language/srv/: GenerateAction.srv  ProcessText.srv
ros_vla_vision/: CMakeLists.txt  package.xml
ros_vla_vision/config/: vlm_api_params.yaml
ros_vla_vision/launch/: vla_vision_scheduler.launch
ros_vla_vision/msg/: VLAGraspPoint.msg  VLAObjectDepth.msg  VLAObjectPose.msg  VLAVLMResult.msg
ros_vla_vision/scripts/: start_vision_scheduler.sh  test_vision_scheduler.py  test_vla_vision_scheduler.py  vla_vision_scheduler.py
ros_vla_vision/srv/: DetectObjects.srv  EstimatePose.srv  ExtractFeatures.srv  GetObjectInfo.srv
论文/ros_vla_language/: CMakeLists.txt  PRODUCTION_SYSTEM_README.md
论文/ros_vla_language/config/: audio_config.yaml  intent_patterns.json  llm_params.yaml
论文/ros_vla_language/msg/: VLAAction.msg
论文/ros_vla_language/scripts/: direct_audio_test.py  vla_language_service.py
论文/ros_vla_language/scripts/tests/: test_audio_output.py  test_microphone.py  test_vla_integration.py
论文/ros_vla_language/srv/: GetIntent.srv
论文/vla/: .gitignore  CMakeLists.txt  PLAYBACK_README.md  README.md  simple_act_train.py  smooth_act_inference_node.py
